add unit test code on PropertyLoader.java

--- a/src/test/resources/tweetlyOauth.properties
+++ b/src/test/resources/tweetlyOauth.properties
@@ -1,2 +1,3 @@
-oauth_consumer_key=test_key
-oauth_consumer_secret=test_secret
+# test apps consumer key & secret
+oauth_consumer_key=pVJJ9XvhyBSNxS4765zK0qoRw
+oauth_consumer_secret=WvZMnCdn2p7jdmvuXJ9VBKz4dg9CqL7XUiprTeG0cQtaXFSTaW
