--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160212</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -33,7 +39,7 @@
                 <version>3.1</version>
                 <configuration>
                     <source>1.7</source>
-                    <target>1.8</target>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
 
